--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,26 +9,40 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+
         <activity
-            android:name=".GameActivity"
-            android:label="@string/app_name"
+            android:name=".MainActivity"
+            android:label="Start"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".GameActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme"
+            android:launchMode="singleTop"
+            >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         <activity
             android:name=".ResultActivity"
             android:label="Thirty - the results"
             android:theme="@style/AppTheme"
+            android:parentActivityName=".GameActivity"
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" /> ///   kolla boken
                 <category android:name="android.intent.category.LAUNCHER" />    //
             </intent-filter>
-
         </activity>
 
     </application>
