bugfix + refacoring + comments

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,8 +40,8 @@
             android:parentActivityName=".GameActivity"
             >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" /> ///   kolla boken
-                <category android:name="android.intent.category.LAUNCHER" />    //
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
